replace pbkdf2 by sha3_512 + base64, update script to populate db , add authService, modifiy Patch to send params in body not in query
