# services/UserManagement/user-manager-server/src/main/java/ch/heigvd/amt/usermanager/api/service/UserService.java
@@ -1,9 +1,9 @@
 package ch.heigvd.amt.usermanager.api.service;
 
 import ch.heigvd.amt.usermanager.api.exceptions.ApiException;
+import ch.heigvd.amt.usermanager.api.model.InlineObject;
 import ch.heigvd.amt.usermanager.api.model.UserInput;
 import ch.heigvd.amt.usermanager.api.model.UserOutput;
-import ch.heigvd.amt.usermanager.api.util.PasswordHash;
 import ch.heigvd.amt.usermanager.entities.UserEntity;
 import ch.heigvd.amt.usermanager.repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,6 +13,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
+import javax.validation.Valid;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -21,16 +22,8 @@ public class UserService {
 
     @Autowired
     UserRepository userRepository;
-
-    private PasswordHash passwordHash = new PasswordHash(5);
-
-    public UserEntity getUserByEmail(String email) throws ApiException {
-        UserEntity userEntity = userRepository.findById(email).orElse(null);
-        if (userEntity == null){
-            throw new ApiException(HttpStatus.NOT_FOUND,"User not found");
-        }
-        return userEntity;
-    }
+    @Autowired
+    AuthService authService;
 
     public UserEntity createUser(UserInput user) throws ApiException {
 
@@ -42,9 +35,12 @@ public class UserService {
         return userEntity;
     }
 
-    public void deleteUserByEmail(String email) throws ApiException {
-        UserEntity userEntity = getUserByEmail(email);
-        userRepository.delete(userEntity);
+    public UserEntity getUserByEmail(String email) throws ApiException {
+        UserEntity userEntity = userRepository.findById(email).orElse(null);
+        if (userEntity == null){
+            throw new ApiException(HttpStatus.NOT_FOUND,"User not found");
+        }
+        return userEntity;
     }
 
     public List<UserOutput> getAllUsers(int numPage, int pageSize) {
@@ -59,6 +55,27 @@ public class UserService {
         }
     }
 
+    public void updateUser(String email, @Valid InlineObject fields) throws ApiException {
+
+        UserEntity userEntity = getUserByEmail(email);
+
+        String isBlocked = fields.getBlocked();
+        String password = fields.getPassword();
+
+        if (isBlocked != null){
+            userEntity.setIsBlocked(Integer.parseInt(isBlocked));
+        }
+        if (password != null){
+            userEntity.setPassword(authService.hashAndEncode(password));
+        }
+        userRepository.save(userEntity);
+    }
+
+    public void deleteUserByEmail(String email) throws ApiException {
+        UserEntity userEntity = getUserByEmail(email);
+        userRepository.delete(userEntity);
+    }
+
     /**
      * Converts a UserInput into a UserEntity
      *
@@ -68,7 +85,7 @@ public class UserService {
     public UserEntity toUserEntity(UserInput user) {
         UserEntity entity = new UserEntity();
         entity.setEmail(user.getEmail());
-        entity.setPassword(passwordHash.hash(user.getPassword()));
+        entity.setPassword(authService.hashAndEncode(user.getPassword()));
         entity.setIsAdmin(user.getIsAdmin());
         entity.setIsBlocked(user.getIsBlocked());
         return entity;
@@ -87,5 +104,4 @@ public class UserService {
         user.setIsBlocked(entity.getIsBlocked());
         return user;
     }
-
 }
